hphp/test/slow/coeffects/reified-3.php.expectf
Fatal error: when resolving anonymous type structure, class A not found in %s on line 7
